<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/music_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/music2" />

    <TextView
        android:id="@+id/title_textview"
        style="@style/TextViewScreenFirstStyle"
        android:background="@color/white"
        android:fontFamily="sans-serif-black"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/title_app"
        android:textColor="@color/black"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/quote_txt"
        style="@style/TextViewScreenFirstStyle"
        android:background="@color/material_dynamic_neutral_variant90"
        android:paddingLeft="10dp"
        android:paddingTop="18dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/quote"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/description_txt"
        style="@style/TextViewScreenFirstStyle"
        android:background="@color/material_dynamic_neutral_variant90"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/instruction_txt"
        style="@style/TextViewScreenFirstStyle"
        android:background="@color/material_dynamic_neutral_variant90"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/instruction"
        android:textColor="@color/cardview_dark_background"
        android:textSize="17sp" />

    <RelativeLayout
        android:id="@+id/button"
        style="@style/CustomRelativeLayoutStyle"
        android:paddingTop="25dp"
        android:paddingBottom="25dp">

        <Button
            android:id="@+id/start_button"
            style="@style/CustomButtonStyle"
            android:text="@string/start_btn" />

    </RelativeLayout>


</LinearLayout>