<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".PlayListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/add_img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/add" />

        <TextView
            android:id="@+id/new_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/new_list"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/artist_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/taylor2" />

        <TextView
            android:id="@+id/song_name"
            style="@style/PlaylistTextview"
            android:layout_marginTop="15dp"
            android:text="@string/song_name"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/artist_name"
            style="@style/PlaylistTextview"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/artist"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/time_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/time_image"
            tools:ignore="VisualLintBounds" />

    </LinearLayout>

</LinearLayout>