<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music4"
    android:orientation="vertical"
    tools:context=".MusicActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/song_img"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/song" />

        <TextView
            android:id="@+id/songs"
            style="@style/MusicTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/song" />

        <ImageView
            android:id="@+id/go_next"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/playlist_img"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/play5" />

        <TextView
            android:id="@+id/playlist"
            style="@style/MusicTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playlists" />

        <ImageView
            android:id="@+id/go_next_list"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/artist_img"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/artist" />

        <TextView
            android:id="@+id/artist"
            style="@style/MusicTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/artists" />

        <ImageView
            android:id="@+id/go_next_artist"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/album_img"
            android:layout_width="38dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/album" />

        <TextView
            android:id="@+id/album"
            style="@style/MusicTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/albums" />

        <ImageView
            android:id="@+id/go_next_album"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/next" />

    </LinearLayout>
</LinearLayout>